testcases/error/mismatch_type.veryl
module mismatch_type {
    const a: u32 = 1;
    inst u: a;
}
